--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.UniQuestBoard"
         tools:targetApi="31">
         <activity
+            android:name=".QuestDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".QuestDetail"
             android:exported="false"
             android:label="@string/title_activity_quest_detail"
