--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:theme="@style/Theme.UniQuestBoard"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false" />
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.UniQuestBoard.NoActionBar"/>
         <activity
             android:name=".QuestDetailActivity"
             android:exported="false" />
@@ -24,10 +26,8 @@
             android:label="@string/title_activity_quest_detail"
             android:theme="@style/Theme.UniQuestBoard" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.UniQuestBoard.NoActionBar">
+            android:name=".ui.login.LoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
