--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 13 03:51:37 HKT 2023
-sdk.dir=/Users/tori/Library/Android/sdk
+#Wed Nov 22 13:41:08 HKT 2023
+sdk.dir=C\:\\Users\\Norstar\\AppData\\Local\\Android\\Sdk
