Update fetch data

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Nov 22 13:41:08 HKT 2023
-sdk.dir=C\:\\Users\\Norstar\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/tori/Library/Android/sdk
